--- a/src/components/Layout/Footer/Footer.css
+++ b/src/components/Layout/Footer/Footer.css
@@ -17,11 +17,6 @@
   width: 50px;
 }
 
-/* .social-footer a {
-  color: #070707 !important;
-  background-color: white;
-} */
-
 footer {
   width: 100vw;
   position: fixed;
@@ -53,9 +48,11 @@ a[name]:hover::after {
 }
 a:hover {
   text-decoration: none;
+  color: rgb(221, 214, 214);
 }
 a {
   position: relative;
   display: inline-block;
   margin-top: 20px;
+  color: grey;
 }
