--- a/src/components/Layout/Header/Header.css
+++ b/src/components/Layout/Header/Header.css
@@ -14,7 +14,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-color: rgb(52, 52, 52);
+  background-color: rgb(53, 48, 48);
   color: white;
 }
 .row {
@@ -68,15 +68,81 @@ body {
   padding-left: 15rem;
 }
 
+body {
+  background: #0b1d2a;
+}
+
+.arrows {
+  width: 60px;
+  height: 72px;
+  position: absolute;
+  left: 50%;
+  margin-left: -30px;
+  bottom: 150px;
+}
+
+.arrows path {
+  stroke: #515f67;
+  fill: transparent;
+  stroke-width: 1px;
+  animation: arrow 3s infinite;
+  -webkit-animation: arrow 3s infinite;
+}
+
+@keyframes arrow {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes arrow /*Safari and Chrome*/ {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.arrows path.a1 {
+  animation-delay: -1s;
+  -webkit-animation-delay: -1s; /* Safari 和 Chrome */
+}
+
+.arrows path.a2 {
+  animation-delay: -0.5s;
+  -webkit-animation-delay: -0.5s; /* Safari 和 Chrome */
+}
+
+.arrows path.a3 {
+  animation-delay: 0s;
+  -webkit-animation-delay: 0s; /* Safari 和 Chrome */
+}
+
 @media (max-width: 768px) {
   .tagline1 {
     font-size: 1.2em;
-    padding-left: 10rem;
+    padding-left: 7rem;
   }
 
   .tagline2,
   .tagline3 {
     font-size: 2.8em;
-    padding-left: 10rem;
+    padding-left: 7rem;
   }
 }
