--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,22 @@ body {
   background-color: var();
   color: var();
   cursor: default;
-  display: flex;
+  /* display: flex; */
   font-family: 'Oswald', sans-serif;
   height: 100vh;
   justify-content: center;
   width: 100%;
+  padding-top: 50px;
+  padding-bottom: 00px;
+  background-color: #f6f6f6;
 }
 button {
   cursor: pointer;
+}
+.full {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: rgb(28, 28, 28);
 }
