--- a/src/components/Layout/Header/Header.css
+++ b/src/components/Layout/Header/Header.css
@@ -71,6 +71,26 @@ body {
 body {
   background: #0b1d2a;
 }
+#home a {
+  width: 60px;
+  height: 60px;
+  border-style: solid;
+  border-radius: 50%;
+  border-color: #515f67;
+  z-index: 100;
+  position: absolute;
+  bottom: 200px;
+  fill: transparent;
+}
+#home a:hover {
+  border-style: solid;
+  border-radius: 50%;
+  border-color: #515f67;
+  z-index: 100;
+  position: absolute;
+  bottom: 200px;
+  fill: transparent;
+}
 
 .arrows {
   width: 60px;
@@ -78,7 +98,7 @@ body {
   position: absolute;
   left: 50%;
   margin-left: -30px;
-  bottom: 150px;
+  bottom: 200px;
 }
 
 .arrows path {
